# remix-bazel

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml
apps/remix/: BUILD.bazel
apps/remix/app/: entry.client.tsx  entry.server.tsx  root.tsx
apps/remix/app/routes/: index.tsx
patches/: browserify-zlib@0.1.4.patch
